assets/css/style.css
/* ... */
/* 404 Error Page */
#error-out {
    height: 660px;
    width: 100%;
    overflow: hidden;

    position: relative;
    margin-top: 250px;
}

#error-image {
    background: url(../images/schoolboard.jpg) no-repeat center center;
    height: 660px;
    width: 100%;
    background-size: 100%;
}

#error-text {
    letter-spacing: 2px;
    text-align: center;

    width: auto;
    height: 100%;

    padding: 10px;
    
    background-color: rgba(197,214,201,0.6);
    color: inherit;

    top: auto;
    right: auto;
    
    position: relative;
}

#error-text h2 {
    font-size: 4rem;
    height: 100px;
}

#error-text p {
    height: 75px;
}

/** Media queries MEMORY GAME ONLY**/
/* For Mobiles */
@media screen and (max-width: 320px) {
    .deck {
		width: 85%;
	}

	.deck .card {
		height: 4.7rem;
		width: 4.7rem;
	}
}

/** Media queries MEMORY GAME ONLY**/
/* For Tablets and larger screens */
@media screen and (min-width: 768px) {
	.container {
		font-size: inherit;
	}

	.deck {
		width: 660px;
		height: 680px;
	}

	.deck .card {
		height: 125px;
		width: 125px;
	}

	.popup {
		width: 60%;
	}
}

/* media queries - General for all other pages */
/* for medium to mobile screens size from 750px wide and down */
@media screen and (max-width: 750px) {
    #menu a {
        float: none;
        display: block;
        width: 100%;
    }

    #bottom-container {
        flex-direction: column;
    }

    .bottom-link {
        width: 100%;
        font-size: inherit;
    }

    .image-box, .text-content {
        float: none;
        width: 100%;
    }

    .quick-click {
        width: 100% !important;
    }

    .quiz-tab button {
        font-size: 1rem;
    }

    #contactus-cover {
        top: 400px;
    }

    .start_btn button{
        font-size: 20px;
    }

    .info_box .info-list .info {
        font-size: 12px;
    }

    section .question_text {
        font-size: 17px;
    }

    section .option_list .option .footer button {
        font-size: 15px;
    } 

    .footer button {
        font-size: 12px;
    }
}

